# ssrag

./: .gitignore  README.md  azure-pipelines.yml  gulpfile.js  package.json
ai/: .dockerignore  DockerfileLocal  README.md  celery_app.py  main.py  pyproject.toml  requirements.txt  test.py
ai/configs/: __init__.py  app_configs.py  constants.py  router_prefix.py  table_names.py
ai/docker/: entrypoint.sh
ai/dto/: __init__.py  auth.py  bool_result.py  cascade.py  chunk_config.py  chunk_result.py  conversation.py  database.py  exceptions.py  flow_node_dataset.py  flow_node_http.py  int_result.py  intent.py  model.py  model_credentials.py  run_process.py  run_variable.py  search_scope.py  site_request.py  string_result.py  task_content_process.py  task_document_process.py  task_result.py
ai/enums/: __init__.py  ai_role_type.py  auth_type.py  data_type.py  model_skill.py  model_type.py  node_type.py  output_format.py  prompt_position.py  provider_type.py  scope_type.py  search_type.py  site_type.py  storage_type.py  task_status.py  variable_data_type.py  variable_type.py
ai/extensions/: __init__.py  llm_base.py  llm_factory.py  text_embedding_base.py  text_embedding_factory.py  text_embedding_model.py  to_image_base.py  to_image_factory.py
ai/managers/: __init__.py
ai/models/: __init__.py  administrator.py  celery_task.py  channel.py  channel_summary.py  chat_group.py  chat_message.py  config.py  content.py  dataset.py  department.py  document.py  error_log.py  flow_edge.py  flow_node.py  flow_variable.py  message.py  model.py  model_provider.py  prompt.py  site.py  (+5 more)
(+2689 files in other folders)
